--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve --host 0.0.0.0",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "start:prod": "ng serve --configuration production --host 0.0.0.0"
   },
   "private": true,
   "dependencies": {
