--- a/package.json
+++ b/package.json
@@ -11,40 +11,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.12",
-    "@angular/common": "^16.2.12",
-    "@angular/compiler": "^16.2.12",
-    "@angular/core": "^16.2.12",
-    "@angular/forms": "^16.2.12",
-    "@angular/platform-browser": "^16.2.12",
-    "@angular/platform-browser-dynamic": "^16.2.12",
-    "@angular/router": "^16.2.12",
+    "@angular/animations": "^18.2.1",
+    "@angular/common": "^18.2.1",
+    "@angular/compiler": "^18.2.1",
+    "@angular/core": "^18.2.1",
+    "@angular/forms": "^18.2.1",
+    "@angular/platform-browser": "^18.2.1",
+    "@angular/platform-browser-dynamic": "^18.2.1",
+    "@angular/router": "^18.2.1",
     "bcryptjs": "^2.4.3",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
-    "flowbite": "^2.3.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.13.3"
+    "flowbite": "^2.5.1",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.7.0",
+    "zone.js": "^0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.14",
-    "@angular/cli": "~16.2.14",
-    "@angular/compiler-cli": "^16.2.12",
+    "@angular-devkit/build-angular": "^18.2.1",
+    "@angular/cli": "~18.2.1",
+    "@angular/compiler-cli": "^18.2.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/crypto-js": "^4.2.2",
-    "@types/jasmine": "~4.3.0",
-    "@types/node": "^20.12.12",
-    "autoprefixer": "^10.4.19",
-    "jasmine-core": "~4.5.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
+    "@types/jasmine": "~5.1.4",
+    "@types/node": "^22.5.0",
+    "autoprefixer": "^10.4.20",
+    "jasmine-core": "~5.2.0",
+    "karma": "~6.4.4",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "postcss": "^8.4.38",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.41",
     "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss": "^3.4.3",
-    "typescript": "~4.9.4"
+    "tailwindcss": "^3.4.10",
+    "typescript": "~5.5.4"
   }
 }
